[FIX] Quit z-index in footer

--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -7,7 +7,6 @@
   flex-direction: column;
   align-items: center;
   height: 90px;
-  z-index: 30;
 }
 .container {
   display: grid;
